--- a/index.html
+++ b/index.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
   <head>
-    <link href="dist/css/style.css" rel="stylesheet" type="text/css" />
     <meta charset="utf-8">
     <link rel="icon" type="image/png" href="assets/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
+    <link href="dist/css/style.css" rel="stylesheet" type="text/css" />
     <title>Fisheye</title>
   </head>
   <body>
+    <!-- Skip links-->
+    <a href="#main-content">Aller au contenu</a>
+    <!--------------->
+    
     <header>
         <img src="assets/images/logo.png" class="logo" />
         <h1>Nos photographes</h1>
     </header>
-    <main id="main">
-        <div class="photographer_section"></div>
+
+    <main id="main-content">
+        <div id="list" class="photographer_section"></div>
     </main>
+
     <script src="dist/bundle.js"></script>
   </body>
 </html>
