--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
     <!--------------->
     
     <header>
+      <!--<a href="index.html">
         <img src="assets/images/logo.png" class="logo" />
-        <h1>Nos photographes</h1>
+      </a>
+        
+        <h1>Nos photographes</h1>-->
     </header>
 
     <main id="main-content">
