--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/png" href="assets/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
     <link href="dist/css/style.css" rel="stylesheet" type="text/css" />
+    <link href="dist/main.css" rel="stylesheet" />
     <title>Fisheye</title>
   </head>
   <body>
@@ -21,7 +22,8 @@
     </header>
 
     <main id="main-content">
-        <div id="list" class="photographer_section"></div>
+      <a class="data-link"></a>
+        <!--<div id="list" class="photographer_section"></div>-->
     </main>
 
     <script src="dist/bundle.js"></script>
