--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <!-- Skip links-->
-    <a href="#main-content">Aller au contenu</a>
+    <a href="#main-content" class="skip-links">Aller au contenu</a>
     <!--------------->
     
     <header>
