--- a/index.html
+++ b/index.html
@@ -13,18 +13,9 @@
     <a href="#main-content" class="skip-links">Aller au contenu</a>
     <!--------------->
     
-    <header>
-      <!--<a href="index.html">
-        <img src="assets/images/logo.png" class="logo" />
-      </a>
-        
-        <h1>Nos photographes</h1>-->
-    </header>
+    <header></header>
 
-    <main id="main-content">
-      <a class="data-link"></a>
-        <!--<div id="list" class="photographer_section"></div>-->
-    </main>
+    <main id="main-content"></main>
 
     <script src="dist/bundle.js"></script>
   </body>
